// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inheritance Overridden method should not duplicated 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "myMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "a",
          "properties": Object {},
          "type": undefined,
          "typeClassification": undefined,
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "ChildClass",
  "properties": Array [],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Overridden parameter property should not duplicated 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "propOne",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "propTwo",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "ChildClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "propOne",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "propTwo",
      "set": undefined,
      "type": String,
    },
  ],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should get base class from deep inheritance 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "GreatGrandChildClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "greatGrandChildProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "grandChildProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "childProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "parentProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
  ],
  "type": GreatGrandChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should get base class getter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "ChildClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get childProp,
      "kind": "Property",
      "name": "childProp",
      "set": undefined,
      "type": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [],
      "get": get parentProp,
      "kind": "Property",
      "name": "parentProp",
      "set": undefined,
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should get base class getter with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "ChildClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get childProp,
      "kind": "Property",
      "name": "childProp",
      "set": undefined,
      "type": undefined,
      "typeClassification": undefined,
    },
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "get": get parentProp,
      "kind": "Property",
      "name": "parentProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
  ],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should get base class method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "myMethod",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "ChildClass",
  "properties": Array [],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should get base class method with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "kind": "Method",
      "name": "myMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "a",
          "properties": Object {},
          "type": String,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": String,
      "typeClassification": "Primitive",
    },
  ],
  "name": "ChildClass",
  "properties": Array [],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should get base class properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "ChildClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "parentProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
  ],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should inspect domain with inheritance using constructor property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "discontinue",
        "properties": Object {},
        "type": Boolean,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "price",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "type",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "Item",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "name",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "discontinue",
      "set": undefined,
      "type": Boolean,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "price",
      "set": undefined,
      "type": Number,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "type",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "id",
      "set": undefined,
      "type": Object,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "createdAt",
      "set": undefined,
      "type": Object,
    },
  ],
  "type": Item,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should inspect domain with inheritance using property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "discontinue",
        "properties": Object {},
        "type": Boolean,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "price",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "type",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "Item",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "name",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "discontinue",
      "set": undefined,
      "type": Boolean,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "price",
      "set": undefined,
      "type": Number,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "type",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "id",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "createdAt",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
  ],
  "type": Item,
  "typeClassification": "Class",
}
`;

exports[`Inheritance Should populate property decorator properly on inheritance 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "date",
        "properties": Object {},
        "type": Date,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "ChildClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "name",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "date",
      "set": undefined,
      "type": Date,
    },
    Object {
      "decorators": Array [
        Object {
          "cache": 10,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "propOne",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [
        Object {
          "cache": 20,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "propTwo",
      "set": undefined,
      "type": String,
    },
  ],
  "type": ChildClass,
  "typeClassification": "Class",
}
`;
